
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int exit (int) ;
 int fflush (int ) ;
 int memset (char*,int ,int) ;
 int printf (char*,...) ;
 int recv (int,char*,int,int ) ;
 int show ;
 int stdout ;

int readbuf(char *s,int socket,char *buffer,int len)
{
    int a,b,i,j=0;

    a=b=i=0;
    memset(buffer,0,len);

    if(s)
    {
        printf("[+] %s......", s);
        fflush(stdout);
    }

    j=recv(socket,buffer,len-1,0);
    if(j <= 0)
    {
        if(s) printf("FAILED!\n");
            printf("[-] Recv data error.\n");
        exit(-1);
    }

    if(s) printf("OK!\n");

    buffer[len-1]='\0';

    if(show==1) printf("<==\r\n%s<==\r\n",buffer);

    return j;
}
